--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,14 @@
 }
 
 body {
+    height: 100vh;
     margin: 0;
     font-family: Helvetica, sans-serif;
 }
 
 .home {
     display: flex;
+    min-height: 100%;
 }
 
 .sidebar {
@@ -22,8 +24,10 @@ body {
 
 .logo-section {
     position: absolute; 
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
+    height: 25%;
+    top: 35%;
 }
 
 
@@ -31,6 +35,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
 }
 
 .logo .odin-logo {
