--- a/styles.css
+++ b/styles.css
@@ -26,34 +26,50 @@ body {
     position: absolute; 
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
-    height: 25%;
-    top: 35%;
+    height: 20%;
+    top: 20%;
 }
-
 
 .logo-section .logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    margin-top: 14px;
 }
 
 .logo .odin-logo {
-    height: 150px;
+    height: 130px;
 }
 
 .logo-section .text {
     font-family: 'NorseBold';
     color: white;
     font-size: 92px;
+    margin: 0;
 }
 
 .content {
     background-color: rgb(236, 236, 236);
-    flex: 2;
+    flex: 2.5;
+    display: flex;
+    flex-direction: column;
 }
 
 .content .text {
-    font-size: 24px;
+    font-size: 14px;
     padding: 48px;
+}
+
+.content .form {
+    background-color: white;
+    width: 100%;
+    height: 350px;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.form-container {
+    display: flex;
 }
