--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,11 @@ body {
 }
 
 .content {
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(247, 249, 253);
     flex: 2.5;
     display: flex;
     flex-direction: column;
+    padding: 62px 0px 62px 0px;
 }
 
 .content .text {
@@ -62,8 +63,13 @@ body {
 
 .content .form {
     background-color: white;
-    width: 100%;
+    flex: 0 0 auto;
     height: 350px;
+    padding: 48px 0px 0px 48px;
+    box-shadow: -1px 5px 16px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: -1px 5px 16px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: -1px 5px 16px 0px rgba(0,0,0,0.2);
+    
 }
 
 .italic {
@@ -72,4 +78,5 @@ body {
 
 .form-container {
     display: flex;
+    gap: 64px;
 }
