--- a/styles.css
+++ b/styles.css
@@ -26,19 +26,21 @@ body {
     position: absolute; 
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
-    height: 20%;
     top: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo-section .logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 14px;
+    margin: 20px;
 }
 
 .logo .odin-logo {
-    height: 130px;
+    height: 150px;
 }
 
 .logo-section .text {
@@ -53,7 +55,6 @@ body {
     flex: 2.5;
     display: flex;
     flex-direction: column;
-    padding: 62px 0px 62px 0px;
 }
 
 .content .text {
@@ -65,7 +66,7 @@ body {
     background-color: white;
     flex: 0 0 auto;
     height: 350px;
-    padding: 48px 0px 0px 48px;
+    padding: 10px 0px 0px 48px;
     box-shadow: -1px 5px 16px 0px rgba(0,0,0,0.2);
     -webkit-box-shadow: -1px 5px 16px 0px rgba(0,0,0,0.2);
     -moz-box-shadow: -1px 5px 16px 0px rgba(0,0,0,0.2);
@@ -79,4 +80,28 @@ body {
 .form-container {
     display: flex;
     gap: 64px;
+}
+
+.first-column, .second-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.buttons {
+    padding: 32px 48px 48px 48px;
+}
+
+.create-acc {
+    background-color: #596D48;
+    color: white;
+    border: 0px;
+    padding: 16px 42px;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.login {
+    color: #596D48;
 }
